# komamripy

./: .mailmap  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
examples/: basic_simulation.py
komamripy/: __init__.py  _session.py  juliapkg.json
tests/: test_basic.py  test_integration.py
