[project]
name = "komamripy"
version = "0.0.1"
description = "Pulseq-compatible, high-performance MRI simulation in Python, powered by KomaMRI.jl."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Anvika Singhal" }]
keywords = ["MRI", "simulation", "Pulseq", "KomaMRI", "Julia", "medical-imaging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "juliacall >=0.9.20",
    "numpy >=1.22",
]

[project.optional-dependencies]
dev = ["pytest >=7"]

[project.urls]
Homepage = "https://github.com/JuliaHealth/komamripy"
Repository = "https://github.com/JuliaHealth/komamripy"
Issues = "https://github.com/JuliaHealth/komamripy/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["komamripy"]