[project]
name = "komamripy"
version = "0.0.1"

description = "Pulseq-compatible, high-performance MRI simulation in Python, powered by KomaMRI.jl."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Carlos Castillo Passi", email = "cacp@stanford.edu" },
    { name = "Anvika Singhal" },
]
keywords = ["MRI", "simulation", "Pulseq", "KomaMRI", "Julia", "medical-imaging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "juliacall >=0.9.20",
]

[project.urls]
Homepage = "https://github.com/JuliaHealth/komamripy"
Repository = "https://github.com/JuliaHealth/komamripy"
Issues = "https://github.com/JuliaHealth/komamripy/issues"

[dependency-groups]
test = ["pytest", "numpy"]
lint = ["ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["komamripy"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]

[tool.hatch.version]
path = "komamripy/__init__.py"